--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <h1>opopopop</h1>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     
 </body>
 </html>
