--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1>opopopop</h1>
 
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="./node_modules/jquery"></script>
     <script type="text/javascript" src="script.js"></script>
     
 </body>
