--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS for beginners</title>
+    <title>Web Development Project</title>
     <link rel="stylesheet" href="style.css">
     <!--
     fonts
@@ -14,7 +14,7 @@
 <body>
     <h1>opopopop</h1>
 
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     
 </body>
