--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Development Project</title>
+    <title>Oravec Mónika Naplója</title>
     <link rel="stylesheet" href="style.css">
     <!--
     fonts
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<a href="./gallery/index.html">click me</a>
+<a href="./gallery/index.html">click me <3</a>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
