--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<a href="./src/gallery/index.html">click me <3</a>
+    <a href="projects/api2/index.html">click me</a>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
