--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 
-    <a href="projects/api2/index.html">click me</a>
+    <a href="projects/api2/index.html">for API</a>
+    <a href="projects/gallery/index.html">for gallery</a>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
