--- a/projects/gallery/index.html
+++ b/projects/gallery/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oravec Zolcsika gondolatai a vilagro, meg minden IS</title>
+    <title>Zolcsika gondolatai a vilagrol, meg minden IS</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 </head>
