--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -16,7 +16,7 @@
     <form class="input-form">
         <!--<label for="pokemonName">Name</label>-->
         <input type="text">
-        <button id="pokemonName" type="button">search for name, just kidding</button>
+        <button id="pokemonName" type="button">search for name</button>
         <!--<label for="id">Id</label>-->
         <input type="pokemonId">
         <button id="id" type="button">search for id</button>
