--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API demo</title>
+    <title>Find your best friend!</title>
     <link rel="stylesheet" href="style.css">
     <!--
     fonts
