--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -15,13 +15,18 @@
     <h1 class="heading">who is your  favourite pokemon?</h1>
     <form class="input-form"></form>
 
+
+
     <div class="pokemonViewer">
         <div class="side">
             <img id="left" src="./svg/arrow.svg" alt="">
         </div>
         <div class="displayData">
-
+            <!--
+            TODO make name class full wide or something
+            -->
             <div class="name"></div>
+
             <img id="photo">
             <div class="details"></div>
 
