developer messages onscreen

--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -29,6 +29,7 @@
 
             <img id="photo">
             <div class="details"></div>
+            <div class="developer"></div>
 
         </div>
         <div class="side">
