--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="displayData">
             <!--
-            TODO make name class full wide or something
+            TODO separate name and picture/details
             -->
             <div class="name"></div>
 
