--- a/projects/api2/index.html
+++ b/projects/api2/index.html
@@ -17,24 +17,25 @@
 
 
 
-    <div class="pokemonViewer">
+    <div class="nameSelector">
         <div class="side">
             <img id="left" src="./svg/arrow.svg" alt="">
         </div>
-        <div class="displayData">
-            <!--
-            TODO separate name and picture/details
-            -->
-            <div class="name"></div>
 
-            <img id="photo">
-            <div class="details"></div>
-            <div class="developer"></div>
+        <div class="name"></div>
 
-        </div>
         <div class="side">
             <img id="right" src="./svg/arrow.svg" alt="">
         </div>
+
+    </div>
+
+    <div class="displayData">
+
+        <img id="photo">
+        <div class="details"></div>
+        <div class="developer"></div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
