--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <h1>now, who is your favourite pokemon?</h1>
+    <h1>all of them</h1>
     <div id="poke_container" class="poke-container"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
