--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -13,7 +13,16 @@
 </head>
 <body>
 
-    <h1>all of them</h1>
+    <div class="wrapper">
+        <div class="searchBox">
+            <input type="text" class="input">
+
+            <div class="searchButton">
+                <i class="fas fa-search"></i>
+            </div>
+
+        </div>
+    </div>
     <div id="poke_container" class="poke-container"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
