--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -18,6 +18,7 @@
             <input type="text" class="input">
 
             <div class="searchButton">
+                <p class="button-subtitle">?</p>
                 <i class="fas fa-search"></i>
             </div>
 
