--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-
+    <div class="floating-btn">click me</div>
     <div class="wrapper">
         <div class="searchBox">
             <input type="text" class="input">
