--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -33,7 +33,7 @@
             <p>Created with <i class="fa fa-heart"></i> by
                 <a target="_blank" href="https://florin-pop.com">Florin Pop</a></p>
             <button class="close-btn"><i class="fas fa-times"></i></button>
-            <h4>Get in touch on</h4>
+            <h4>Contact</h4>
             <ul>
                 <li>
                     <a href="https://twitter.com/florinpop1705" target="_blank">
