--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <div class="floating-btn">click me</div>
+    <div class="floating-btn"></div>
     <div class="wrapper">
         <div class="searchBox">
             <input type="text" class="input">
@@ -59,7 +59,7 @@
         </div>
     </div>
     <button class="floating-btn">
-        Get in Touch
+        Contact
     </button>
 
 
