--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon</title>
+    <title>Who`s Your Favourite Pokemon</title>
     <link rel="stylesheet" href="./style.css">
 
     <!--
@@ -59,7 +59,7 @@
         </div>
     </div>
     <button class="floating-btn">
-        Contact
+      Contact
     </button>
 
 
