--- a/projects/api4/index.html
+++ b/projects/api4/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>Who`s Your Favourite Pokemon</title>
     <link rel="stylesheet" href="./style.css">
 
@@ -13,7 +15,6 @@
 
 </head>
 <body>
-    <div class="floating-btn"></div>
     <div class="wrapper">
         <div class="searchBox">
             <input type="text" class="input">
@@ -30,28 +31,27 @@
     <!-- SOCIAL PANEL HTML -->
     <div class="social-panel-container">
         <div class="social-panel">
-            <p>Created with <i class="fa fa-heart"></i> by
-                <a target="_blank" href="https://florin-pop.com">Florin Pop</a></p>
-            <button class="close-btn"><i class="fas fa-times"></i></button>
-            <h4>Contact</h4>
+            <button class="close-btn"><i class="fas fa-times"></i>X</button>
+            <!-- SOCIAL PANEL TITLE -->
+            <h4>Get in touch on</h4>
             <ul>
                 <li>
-                    <a href="https://twitter.com/florinpop1705" target="_blank">
+                    <a href="https://example.com" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/in/florinpop17" target="_blank">
+                    <a href="https://example.com" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://facebook.com/florinpop17" target="_blank">
+                    <a href="https://example.com" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/florinpop17" target="_blank">
+                    <a href="https://example.com" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </li>
@@ -59,7 +59,7 @@
         </div>
     </div>
     <button class="floating-btn">
-      Contact
+        Contact Me
     </button>
 
 
